--- a/argent_bank/src/components/header/header.css
+++ b/argent_bank/src/components/header/header.css
@@ -1,29 +1,48 @@
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 80px;
-    margin: 0px 25px 25px 25px;
-  }
-
-nav{
-    display: flex;
-    flex-direction: row;
-    float: right; 
+.sr-only {
+  border: 0 !important;
+  clip: rect(1px, 1px, 1px, 1px) !important; /* 1 */
+  -webkit-clip-path: inset(50%) !important;
+  clip-path: inset(50%) !important; /* 2 */
+  height: 1px !important;
+  margin: -1px !important;
+  overflow: hidden !important;
+  padding: 0 !important;
+  position: absolute !important;
+  width: 1px !important;
+  white-space: nowrap !important; /* 3 */
 }
 
-a{
-    width: fit-content;
-    margin-right: 20px;
-    color: #FF6060;
-    text-decoration: none;
+.main-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 20px;
 }
-.logo{
-    height: auto;
+
+.main-nav a {
+  font-weight: bold;
+  color: #2c3e50;
 }
-.home.active {
-    text-decoration: underline;
-  }
-.about.active{
-    text-decoration: underline;
-  }
+
+.main-nav a.router-link-exact-active {
+  color: #42b983;
+}
+
+.main-nav-item {
+  text-decoration: none;
+  margin-right: 0.5rem;
+}
+
+.main-nav-item:hover {
+  text-decoration: underline;
+}
+
+.main-nav-logo {
+  display: flex;
+  align-items: center;
+}
+
+.main-nav-logo-image {
+  max-width: 100%;
+  width: 200px;
+}
